adopt  MVC architecture
create 3 differents files for 3 different roles

--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ h3
     margin-bottom:0px;
 }
 
-.news p
+.post p
 {
     background-color:#CCCCCC;
     margin-top:0px;
 }
 
-.news
+.post
 {
     width:70%;
     margin:auto;
