No use of htmlspecialchars on post by the blog author; use it for comments?

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,13 @@
+/*
+  Name: Billet simple pour l'Alaska
+  Date: September 2018
+  description: >-
+  Blog engine for an author.
+  Version: 1.0
+  Author: Abel L Mbula
+  Autor URI: http://abelmbula.com
+*/
+
 .m-border-b {
   border-bottom: 1px solid #e5e5e5;
   text-transform: capitalize;
