--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,15 +19,15 @@
 }
 
 body {
-  background-color: #e9f2f9;
+  background-color: #f4f4f4;
   padding: 50px 0px 0px 0px;
   z-index: 0;
 }
 
 article {
-  background-color: #ffffff;
+  /*background-color: #ffffff;
   margin-bottom: 35px;
-  padding: 25px;
+  padding: 25px;*/
 }
 
 .entry-footer {
@@ -40,7 +40,10 @@ article {
 }
 
 #posts {
-   max-width: 900px;
+   max-width: 830px;
+   padding-left: 5%;
+   padding-right: 5%;
+   /*margin: 0 auto;*/
 }
 
 #content {
